service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp-service
spec:
  ports:
  - port: 80
    targetPort: 5000
    name: myapp
  selector:
    app: myapp
