ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /home
        pathType: ImplementationSpecific
        backend:
          service:
            name: myapp-service
            port:
              number: 80
